--- a/src/styles/atoms/_atoms.input.scss
+++ b/src/styles/atoms/_atoms.input.scss
@@ -41,20 +41,24 @@ textarea {
   select,
   textarea {
     border-radius: 0;
-    min-height: $spacer-lg;
-    padding: $input-padding;
+    line-height: normal;
     resize: vertical;
     transition: border-color $animation-normal;
     width: 100%;
   }
 
+  input {
+    min-height: $input-height;
+    padding: $input-padding;
+  }
+
   select {
-    padding-bottom: $spacer-xs;
-    padding-top: $spacer-xs;
+    min-height: $select-height;
+    padding: $select-padding;
   }
 
   textarea {
-    min-height: 12rem;
+    min-height: $textarea-height;
     padding: $textarea-padding;
   }
 }
@@ -279,4 +283,46 @@ textarea {
 
 .a-input__wrapper--inline {
   display: inline-block;
+}
+
+
+/**
+ * INPUT SIZES
+ * -------------------------------------------------------------------
+ */
+
+.a-input {
+  &.a-input--small {
+    input {
+      min-height: $input-height-sm;
+      padding: $input-padding-sm;
+    }
+
+    select {
+      min-height: $select-height-sm;
+      padding: $select-padding-sm;
+    }
+
+    textarea {
+      min-height: $textarea-height-sm;
+      padding: $textarea-padding-sm;
+    }
+  }
+
+  &.a-input--large {
+    input {
+      min-height: $input-height-lg;
+      padding: $input-padding-lg;
+    }
+
+    select {
+      min-height: $select-height-lg;
+      padding: $select-padding-lg;
+    }
+
+    textarea {
+      min-height: $textarea-height-lg;
+      padding: $textarea-padding-lg;
+    }
+  }
 }
